Fix native compilation and align deployed migration history